<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_navigation"
    app:startDestination="@+id/navigation_audio">

    <fragment
        android:id="@+id/navigation_audio"
        android:name="com.android.chewbiteSensors.ui.audio.AudioFragment"
        android:label="@string/text_sound_configuration"
        tools:layout="@layout/fragment_audio_setting" />

    <fragment
        android:id="@+id/navigation_movement"
        android:name="com.android.chewbiteSensors.ui.movement.MovementFragment"
        android:label="@string/text_movement_configuration"
        tools:layout="@layout/fragment_movement_setting" />

    <fragment
        android:id="@+id/navigation_gps"
        android:name="com.android.chewbiteSensors.ui.gps.GPSFragment"
        android:label="@string/text_gps_configuration"
        tools:layout="@layout/fragment_gps_setting" />

</navigation>